--- a/packages/workspaces/apiserver.service
+++ b/packages/workspaces/apiserver.service
@@ -6,6 +6,7 @@ Requires=storewolf.service migrator.service
 [Service]
 Type=notify
 ExecStart=/usr/bin/apiserver --datastore-path /var/lib/thar/datastore/current --socket-gid 274
+StandardError=journal+console
 
 [Install]
 WantedBy=multi-user.target
