--- a/packages/workspaces/sundog.service
+++ b/packages/workspaces/sundog.service
@@ -8,6 +8,7 @@ Requires=network-online.target apiserver.service
 Type=oneshot
 ExecStart=/usr/bin/sundog
 RemainAfterExit=true
+StandardError=journal+console
 
 [Install]
 WantedBy=multi-user.target
