host-ctr: exposes error level log messages to console
Splits logrus logs to different output with logsplit hook.
Error, fatal, panic log goes to standard error and all other log levels
go to stdout

--- a/packages/workspaces/host-containers@.service
+++ b/packages/workspaces/host-containers@.service
@@ -14,6 +14,7 @@ Restart=always
 RestartSec=45
 TimeoutStopSec=60
 KillMode=mixed
+StandardError=journal+console
 
 [Install]
 WantedBy=multi-user.target
