--- a/variants/aws-k8s-1.15/Cargo.toml
+++ b/variants/aws-k8s-1.15/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
-name = "aws-k8s"
+# This is the aws-k8s-1.15 variant.  "." is not allowed in crate names, but we
+# don't use this crate name anywhere.
+name = "aws-k8s-1_15"
 version = "0.1.0"
 edition = "2018"
 publish = false
