--- a/packages/kubernetes/kubelet.service
+++ b/packages/kubernetes/kubelet.service
@@ -12,14 +12,14 @@ ExecStartPre=/sbin/iptables -P FORWARD ACCEPT
 # Pull the pause container image before starting `kubelet` so `containerd/cri` wouldn't have to
 ExecStartPre=/usr/bin/host-ctr -source ${POD_INFRA_CONTAINER_IMAGE} \
     -pull-image-only \
-    -containerd-socket /run/containerd/containerd.sock \
+    -containerd-socket /run/dockershim.sock \
     -namespace k8s.io
 ExecStart=/usr/bin/kubelet \
     --cloud-provider aws \
     --config /etc/kubernetes/kubelet/config \
     --kubeconfig /etc/kubernetes/kubelet/kubeconfig \
     --container-runtime=remote \
-    --container-runtime-endpoint=unix:///run/containerd/containerd.sock \
+    --container-runtime-endpoint=unix:///run/dockershim.sock \
     --network-plugin cni \
     --root-dir /var/lib/kubelet \
     --cert-dir /var/lib/kubelet/pki \
