--- a/sources/api/apiserver/Cargo.toml
+++ b/sources/api/apiserver/Cargo.toml
@@ -8,8 +8,10 @@ publish = false
 build = "build.rs"
 
 [dependencies]
-actix-web = { version = "1.0.5", default-features = false, features = ["uds"] }
+actix-rt = "1.0.0"
+actix-web = { version = "2.0.0", default-features = false }
 bottlerocket-release = { path = "../../bottlerocket-release" }
+futures = { version = "0.3", default-features = false }
 libc = "0.2"
 log = "0.4"
 models = { path = "../../models" }
