--- a/sources/api/early-boot-config/Cargo.toml
+++ b/sources/api/early-boot-config/Cargo.toml
@@ -9,10 +9,9 @@ build = "build.rs"
 
 [dependencies]
 apiclient = { path = "../apiclient" }
-apiserver = { path = "../apiserver" }
-http = "0.1"
+http = "0.2"
 log = "0.4"
-reqwest = { version = "0.9", default-features = false, features = [] }
+reqwest = { version = "0.10", default-features = false, features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 simplelog = "0.7"
