--- a/sources/api/pluto/Cargo.toml
+++ b/sources/api/pluto/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 build = "build.rs"
 
 [dependencies]
-reqwest = { version = "0.9", default-features = false, features = []}
+reqwest = { version = "0.10", default-features = false, features = ["blocking"]}
 serde_json = "1"
 snafu = "0.6"
 
