--- a/packages/ncurses/Cargo.toml
+++ b/packages/ncurses/Cargo.toml
@@ -9,8 +9,8 @@ build = "build.rs"
 path = "pkg.rs"
 
 [[package.metadata.build-package.external-files]]
-url = "https://invisible-mirror.net/archives/ncurses/current/ncurses-6.1-20180923.tgz"
-sha512 = "63709722949b013b07ec760db5006cdbafa1c75dee056f5206aa3031706fd5eb57342e99e0c29ce154646979aa7fc6d8c80f8a0e8debf128655d147b6a80c7b8"
+url = "https://invisible-mirror.net/archives/ncurses/ncurses-6.2.tar.gz"
+sha512 = "4c1333dcc30e858e8a9525d4b9aefb60000cfc727bc4a1062bace06ffc4639ad9f6e54f6bdda0e3a0e5ea14de995f96b52b3327d9ec633608792c99a1e8d840d"
 
 [build-dependencies]
 glibc = { path = "../glibc" }
