Comment unused licenses in whitelist so we don't get warnings

--- a/sources/deny.toml
+++ b/sources/deny.toml
@@ -19,7 +19,7 @@ allow = [
     "MIT",
     "OpenSSL",
     "Unlicense",
-    "Zlib",
+    #"Zlib",  # OK but currently unused; commenting to prevent warning
 ]
 
 exceptions = [
