kubelet: specify `--containerd` flag to specify containerd socket path
Pass `--containerd` to kubelet to specify containerd socket path so cAdvisor can make calls to containerd for gathering metric information.

--- a/packages/kubernetes/kubelet.service
+++ b/packages/kubernetes/kubelet.service
@@ -20,6 +20,7 @@ ExecStart=/usr/bin/kubelet \
     --kubeconfig /etc/kubernetes/kubelet/kubeconfig \
     --container-runtime=remote \
     --container-runtime-endpoint=unix:///run/dockershim.sock \
+    --containerd=/run/dockershim.sock \
     --network-plugin cni \
     --root-dir /var/lib/kubelet \
     --cert-dir /var/lib/kubelet/pki \
