--- a/sources/updater/updog/Cargo.toml
+++ b/sources/updater/updog/Cargo.toml
@@ -27,6 +27,7 @@ update_metadata = { path = "../update_metadata" }
 structopt = "0.3"
 migrator = { path = "../../api/migration/migrator" }
 url = "2.1.0"
+signal-hook = "0.1.13"
 
 [dev-dependencies]
 tempfile = "3.1.0"
