Add parse-datetime crate

--- a/packages/os/Cargo.toml
+++ b/packages/os/Cargo.toml
@@ -10,6 +10,7 @@ variant-sensitive = true
 source-groups = [
     "api",
     "bottlerocket-release",
+    "parse-datetime",
     "growpart",
     "updater",
     "webpki-roots-shim",
