migrations: add migration to migrate admin container version
Adds a new migration to migrate the default admin host-container version
from v0.4.0 to v0.5.0.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "api/migration/migration-helpers",
 
     # "api/migration/migrations/vX.Y.Z/...
+    "api/migration/migrations/v0.3.2/migrate-admin-container-v0_5_0",
 
     "bottlerocket-release",
 
