--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,19 @@ on:
 jobs:
   build:
     runs-on: [self-hosted, linux, x64]
+    continue-on-error: ${{ matrix.supported }}
+    strategy:
+      matrix:
+        variant: [aws-k8s-1.15, aws-k8s-1.16]
+        arch: [x86_64, aarch64]
+        supported: [true]
+        include:
+          - variant: aws-dev
+            arch: x86_64
+            supported: false
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - run: cargo install --version 0.30.0 cargo-make
       - run: cargo install --version 0.6.6 cargo-deny --no-default-features
-      - run: cargo make
+      - run: cargo make -e BUILDSYS_VARIANT=${{ matrix.variant }} -e BUILDSYS_ARCH=${{ matrix.arch }} -e BUILDSYS_JOBS=12
