apiserver: adds update actions API
Extends the Bottlerocket API with endpoints to do updates.

New action endpoints:

* /actions/refresh-update
* /actions/prepare-update
* /actions/activate-update
* /actions/deactivate-update
* /updates/status

'apiserver' uses 'thar-be-updates' to dispatch update commands.

--- a/sources/api/apiserver/Cargo.toml
+++ b/sources/api/apiserver/Cargo.toml
@@ -11,16 +11,21 @@ build = "build.rs"
 actix-rt = "1.0.0"
 actix-web = { version = "2.0.0", default-features = false }
 bottlerocket-release = { path = "../../bottlerocket-release" }
+fs2 = "0.4.3"
 futures = { version = "0.3", default-features = false }
+http = "0.2.1"
 libc = "0.2"
 log = "0.4"
 models = { path = "../../models" }
 nix = "0.17.0"
+num = "0.3.0"
 percent-encoding = "2.1"
+semver = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simplelog = "0.7"
 snafu = "0.6"
+thar-be-updates = { path = "../thar-be-updates" }
 walkdir = "2.2"
 
 [build-dependencies]
