updog: use version-lock and ignore-wave setting for default behavior
updog reads the 'version-lock' and 'ignore-wave' settings for
determining default update behavior. Still allows overrides via the
command line options.

--- a/sources/updater/updog/Cargo.toml
+++ b/sources/updater/updog/Cargo.toml
@@ -28,6 +28,7 @@ structopt = "0.3"
 migrator = { path = "../../api/migration/migrator" }
 url = "2.1.0"
 signal-hook = "0.1.13"
+models = { path = "../../models" }
 
 [dev-dependencies]
 tempfile = "3.1.0"
