--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -19,6 +19,7 @@ members = [
 
     # "api/migration/migrations/vX.Y.Z/...
     "api/migration/migrations/v0.3.2/migrate-admin-container-v0-5-0",
+    "api/migration/migrations/v0.5.0/add-version-lock-ignore-waves",
 
     "bottlerocket-release",
 
