--- a/Release.toml
+++ b/Release.toml
@@ -25,5 +25,6 @@ version = "1.0.5"
     "migrate_v1.0.6_add-static-pods.lz4",
     "migrate_v1.0.6_kubelet-standalone-tls-settings.lz4",
     "migrate_v1.0.6_kubelet-standalone-tls-services.lz4",
+    "migrate_v1.0.6_control-container-v0-4-2.lz4"
 ]
 
