--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -42,6 +42,7 @@ members = [
     "api/migration/migrations/v1.0.6/add-static-pods",
     "api/migration/migrations/v1.0.6/kubelet-standalone-tls-settings",
     "api/migration/migrations/v1.0.6/kubelet-standalone-tls-services",
+    "api/migration/migrations/v1.0.6/control-container-v0-4-2",
 
     "bottlerocket-release",
 
