--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -45,6 +45,7 @@ members = [
     "api/migration/migrations/v1.0.6/kubelet-standalone-tls-services",
     "api/migration/migrations/v1.0.6/control-container-v0-4-2",
     "api/migration/migrations/v1.0.6/add-shibaken",
+    "api/migration/migrations/v1.0.6/admin-container-v0-6-0",
 
     "bottlerocket-release",
 
