early-boot-config: Add guestinfo to available VMWare retrieval methods
This change adds an additional user data source to the VMWare provider;
the guestinfo (host-guest) interface.  This source will be checked after
the CD-ROM, and override any settings set via CD-ROM.

--- a/sources/clarify.toml
+++ b/sources/clarify.toml
@@ -115,3 +115,12 @@ expression = "MIT"
 license-files = [
     { path = "LICENSE", hash = 0xff97fcac },
 ]
+
+[clarify.vmw_backdoor]
+expression = "MIT OR Apache-2.0"
+license-files = [
+    { path = "COPYRIGHT", hash = 0xac8571aa },
+    { path = "LICENSE-APACHE-2.0", hash = 0x18785531 },
+    { path = "LICENSE-MIT", hash = 0x28392cf3 },
+]
+
