--- a/sources/api/early-boot-config/Cargo.toml
+++ b/sources/api/early-boot-config/Cargo.toml
@@ -18,6 +18,7 @@ log = "0.4"
 reqwest = { version = "0.10", default-features = false, features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
+serde_plain = "0.3"
 serde-xml-rs = "0.4.1"
 simplelog = "0.9"
 snafu = "0.6"
@@ -25,6 +26,10 @@ tokio = { version = "0.2", default-features = false, features = ["macros", "rt-t
 # When hyper updates to tokio 0.3:
 #tokio = { version = "0.3", default-features = false, features = ["macros", "rt-multi-thread"] }
 toml = "0.5"
+
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+# vmw_backdoor includes x86_64 assembly, prevent it from building for ARM
+vmw_backdoor = "0.2"
 
 [build-dependencies]
 cargo-readme = "3.1"
