--- a/packages/dbus-broker/dbus-broker.service
+++ b/packages/dbus-broker/dbus-broker.service
@@ -19,4 +19,4 @@ ExecReload=/usr/bin/busctl call org.freedesktop.DBus /org/freedesktop/DBus org.f
 
 [Install]
 Alias=dbus.service
-WantedBy=multi-user.target
+WantedBy=preconfigured.target
