--- a/Release.toml
+++ b/Release.toml
@@ -1,4 +1,4 @@
-version = "1.0.7"
+version = "1.0.8"
 
 [migrations]
 "(0.3.1, 0.3.2)" = ["migrate_v0.3.2_admin-container-v0-5-0.lz4"]
@@ -36,4 +36,5 @@ version = "1.0.7"
     "migrate_v1.0.8_proxy-affect-host-containers.lz4",
     "migrate_v1.0.8_control-container-v0-5-0.lz4",
     "migrate_v1.0.8_admin-container-v0-7-0.lz4",
+    "migrate_v1.0.8_add-bootstrap-containers.lz4"
 ]
