--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "api/apiserver",
     "api/apiclient",
+    "api/bootstrap-containers",
     "api/bork",
     "api/corndog",
     "api/datastore",
@@ -51,6 +52,7 @@ members = [
     "api/migration/migrations/v1.0.8/proxy-affect-host-containers",
     "api/migration/migrations/v1.0.8/control-container-v0-5-0",
     "api/migration/migrations/v1.0.8/admin-container-v0-7-0",
+    "api/migration/migrations/v1.0.8/add-bootstrap-containers",
 
     "bottlerocket-release",
 
