vmware-dev: Change image format to vmdk

--- a/variants/vmware-dev/Cargo.toml
+++ b/variants/vmware-dev/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [package.metadata.build-variant]
+image-format = "vmdk"
 included-packages = [
 # core
     "release",
