build: ignore more artifacts during builds
We use the build directory for output other than package builds, but
only the RPM packages need to be included in the build context that
Docker creates.

Switch to an allowlist approach so that we exclude new extensions by
default.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,7 @@
 /.git
 /.gomodcache
-/build/**/*.img
-/build/**/*.lz4
-/build/**/*.xz
-/build/**/*.tar
-/build/**/*-debuginfo-*.rpm
-/build/**/*-debugsource-*.rpm
+/build/*
+!/build/rpms/*.rpm
+/build/rpms/*-debuginfo-*.rpm
+/build/rpms/*-debugsource-*.rpm
 **/target/*
