--- a/sources/api/pluto/Cargo.toml
+++ b/sources/api/pluto/Cargo.toml
@@ -10,10 +10,14 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
-lazy_static = "1.4"
-reqwest = { version = "0.11.1", default-features = false, features = ["blocking"]}
+apiclient = { path = "../apiclient" }
+models = { path = "../../models" }
+reqwest = { version = "0.11.1", default-features = false }
+rusoto_core = { version = "0.46", default-features = false, features = ["rustls"] }
+rusoto_eks = { version = "0.46", default-features = false, features = ["rustls"] }
 serde_json = "1"
 snafu = "0.6"
+tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
 cargo-readme = "3.1"
